lab3/sytax.output
Terminals unused in grammar

   STRUCT
   ELIF
   SPACE
   AERROR
   NULLPTR
   EOL


State 78 conflicts: 1 shift/reduce
State 82 conflicts: 21 shift/reduce
State 124 conflicts: 21 shift/reduce, 1 reduce/reduce
State 126 conflicts: 1 shift/reduce, 22 reduce/reduce
State 156 conflicts: 21 shift/reduce
State 157 conflicts: 21 shift/reduce
State 186 conflicts: 21 shift/reduce
State 194 conflicts: 21 shift/reduce
State 196 conflicts: 21 shift/reduce
State 205 conflicts: 21 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ClassDefs

    2 ClassDefs: Class
    3          | Class ClassDefs

    4 Class: CLASS ID LC ClassStms RC
    5      | CLASS ID EXTENDS ID LC ClassStms RC

    6 ClassStms: ClassStm ClassStms
    7          | ClassStm

    8 ClassStm: Fun
    9         | DeclareStm

   10 Fun: VarType ID LP Args RP LC BaseStm RC
   11    | STATIC VarType ID LP Args RP LC BaseStm RC
   12    | ID LP Args RP LC BaseStm RC

   13 VarType: TYPE Arrays
   14        | ID Arrays
   15        | TYPE
   16        | ID

   17 Arrays: LB RB

   18 BaseStm: Lines

   19 Lines: Line
   20      | Line Lines

   21 Line: EMPTY
   22     | IfStm
   23     | WhileStm
   24     | VarStm SEMI
   25     | DeclareStm
   26     | ReturnStm
   27     | BreakStm
   28     | ForStm

   29 BreakStm: BREAK SEMI

   30 IfStm: IF LP BoolExp RP LC BaseStm RC
   31      | IfStm ElseStm

   32 ElseStm: ELSE LC BaseStm RC
   33        | EMPTY

   34 WhileStm: WHILE LP BoolExp RP LC BaseStm RC

   35 ForStm: FOR LP Exp SEMI BoolExp SEMI Exp RP LC BaseStm RC

   36 DeclareStm: VarType DeclareVarStm SEMI
   37           | STATIC VarType DeclareVarStm SEMI
   38           | FINAL VarType DeclareVarStm SEMI
   39           | STATIC FINAL VarType DeclareVarStm SEMI

   40 DeclareVarStm: ID
   41              | ID ASSIGNOP Exp
   42              | DeclareVarStm COMMA DeclareVarStm

   43 VarStm: Exp

   44 ReturnStm: RETURN SEMI
   45          | RETURN Exp SEMI

   46 Args: EMPTY
   47     | Arg

   48 Arg: VarType ID
   49    | VarType ID COMMA Arg

   50 BoolExp: Exp RELOP Exp
   51        | Exp AND Exp
   52        | Exp OR Exp

   53 Exp: Constant
   54    | Call
   55    | ID DOT Call
   56    | ClassPointer DOT Call
   57    | IdStm
   58    | Lvalue ASSIGNOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | BoolExp
   62    | Exp STAR Exp
   63    | Exp DIV Exp
   64    | LP Exp RP
   65    | MINUS Exp
   66    | NOT Exp
   67    | ArrayIndex
   68    | DPLUS IdStm
   69    | IdStm DPLUS
   70    | DMINUS IdStm
   71    | IdStm DMINUS
   72    | NEW Call
   73    | NEW ArrayIndex

   74 IdStm: ID
   75      | ArrayIndex DOT ID
   76      | ID DOT ID
   77      | ClassPointer DOT ID

   78 ClassPointer: THIS
   79             | SUPER

   80 ArrayIndex: TYPE LB Exp RB
   81           | ID LB Exp RB

   82 Lvalue: IdStm
   83       | ArrayIndex

   84 Constant: INT
   85         | FLOAT
   86         | BOOL
   87         | STR

   88 Call: ID LP CallArgs RP

   89 CallArgs: EMPTY
   90         | CallArg

   91 CallArg: Exp
   92        | Exp COMMA CallArg

   93 EMPTY: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
STATIC (258) 11 37 39
FINAL (259) 38 39
BREAK (260) 29
TYPE (261) 13 15 80
STRUCT (262)
EXTENDS (263) 5
CLASS (264) 4 5
RETURN (265) 44 45
IF (266) 30
ELSE (267) 32
ELIF (268)
FOR (269) 35
WHILE (270) 34
ID (271) 4 5 10 11 12 14 16 40 41 48 49 55 74 75 76 77 81 88
SPACE (272)
SEMI (273) 24 29 35 36 37 38 39 44 45
COMMA (274) 42 49 92
ASSIGNOP (275) 41 58
RELOP (276) 50
DOT (277) 55 56 75 76 77
NOT (278) 66
LP (279) 10 11 12 30 34 35 64 88
RP (280) 10 11 12 30 34 35 64 88
LB (281) 17 80 81
RB (282) 17 80 81
LC (283) 4 5 10 11 12 30 32 34 35
RC (284) 4 5 10 11 12 30 32 34 35
AERROR (285)
DPLUS (286) 68 69
DMINUS (287) 70 71
INT (288) 84
FLOAT (289) 85
NULLPTR (290)
STR (291) 87
BOOL (292) 86
PLUS (293) 59
MINUS (294) 60 65
STAR (295) 62
DIV (296) 63
OR (297) 52
AND (298) 51
EOL (299)
NEW (300) 72 73
THIS (301) 78
SUPER (302) 79


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Program (49)
    on left: 1, on right: 0
ClassDefs (50)
    on left: 2 3, on right: 1 3
Class (51)
    on left: 4 5, on right: 2 3
ClassStms (52)
    on left: 6 7, on right: 4 5 6
ClassStm (53)
    on left: 8 9, on right: 6 7
Fun (54)
    on left: 10 11 12, on right: 8
VarType (55)
    on left: 13 14 15 16, on right: 10 11 36 37 38 39 48 49
Arrays (56)
    on left: 17, on right: 13 14
BaseStm (57)
    on left: 18, on right: 10 11 12 30 32 34 35
Lines (58)
    on left: 19 20, on right: 18 20
Line (59)
    on left: 21 22 23 24 25 26 27 28, on right: 19 20
BreakStm (60)
    on left: 29, on right: 27
IfStm (61)
    on left: 30 31, on right: 22 31
ElseStm (62)
    on left: 32 33, on right: 31
WhileStm (63)
    on left: 34, on right: 23
ForStm (64)
    on left: 35, on right: 28
DeclareStm (65)
    on left: 36 37 38 39, on right: 9 25
DeclareVarStm (66)
    on left: 40 41 42, on right: 36 37 38 39 42
VarStm (67)
    on left: 43, on right: 24
ReturnStm (68)
    on left: 44 45, on right: 26
Args (69)
    on left: 46 47, on right: 10 11 12
Arg (70)
    on left: 48 49, on right: 47 49
BoolExp (71)
    on left: 50 51 52, on right: 30 34 35 61
Exp (72)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73, on right: 35 41 43 45 50 51 52 58 59 60 62 63 64 65 66
    80 81 91 92
IdStm (73)
    on left: 74 75 76 77, on right: 57 68 69 70 71 82
ClassPointer (74)
    on left: 78 79, on right: 56 77
ArrayIndex (75)
    on left: 80 81, on right: 67 73 75 83
Lvalue (76)
    on left: 82 83, on right: 58
Constant (77)
    on left: 84 85 86 87, on right: 53
Call (78)
    on left: 88, on right: 54 55 56 72
CallArgs (79)
    on left: 89 90, on right: 88
CallArg (80)
    on left: 91 92, on right: 90 92
EMPTY (81)
    on left: 93, on right: 21 33 46 89


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    ClassDefs  go to state 3
    Class      go to state 4


State 1

    4 Class: CLASS . ID LC ClassStms RC
    5      | CLASS . ID EXTENDS ID LC ClassStms RC

    ID  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: ClassDefs .

    $default  reduce using rule 1 (Program)


State 4

    2 ClassDefs: Class .
    3          | Class . ClassDefs

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (ClassDefs)

    ClassDefs  go to state 7
    Class      go to state 4


State 5

    4 Class: CLASS ID . LC ClassStms RC
    5      | CLASS ID . EXTENDS ID LC ClassStms RC

    EXTENDS  shift, and go to state 8
    LC       shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    3 ClassDefs: Class ClassDefs .

    $default  reduce using rule 3 (ClassDefs)


State 8

    5 Class: CLASS ID EXTENDS . ID LC ClassStms RC

    ID  shift, and go to state 10


State 9

    4 Class: CLASS ID LC . ClassStms RC

    STATIC  shift, and go to state 11
    FINAL   shift, and go to state 12
    TYPE    shift, and go to state 13
    ID      shift, and go to state 14

    ClassStms   go to state 15
    ClassStm    go to state 16
    Fun         go to state 17
    VarType     go to state 18
    DeclareStm  go to state 19


State 10

    5 Class: CLASS ID EXTENDS ID . LC ClassStms RC

    LC  shift, and go to state 20


State 11

   11 Fun: STATIC . VarType ID LP Args RP LC BaseStm RC
   37 DeclareStm: STATIC . VarType DeclareVarStm SEMI
   39           | STATIC . FINAL VarType DeclareVarStm SEMI

    FINAL  shift, and go to state 21
    TYPE   shift, and go to state 13
    ID     shift, and go to state 22

    VarType  go to state 23


State 12

   38 DeclareStm: FINAL . VarType DeclareVarStm SEMI

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    VarType  go to state 24


State 13

   13 VarType: TYPE . Arrays
   15        | TYPE .

    LB  shift, and go to state 25

    $default  reduce using rule 15 (VarType)

    Arrays  go to state 26


State 14

   12 Fun: ID . LP Args RP LC BaseStm RC
   14 VarType: ID . Arrays
   16        | ID .

    LP  shift, and go to state 27
    LB  shift, and go to state 25

    $default  reduce using rule 16 (VarType)

    Arrays  go to state 28


State 15

    4 Class: CLASS ID LC ClassStms . RC

    RC  shift, and go to state 29


State 16

    6 ClassStms: ClassStm . ClassStms
    7          | ClassStm .

    STATIC  shift, and go to state 11
    FINAL   shift, and go to state 12
    TYPE    shift, and go to state 13
    ID      shift, and go to state 14

    $default  reduce using rule 7 (ClassStms)

    ClassStms   go to state 30
    ClassStm    go to state 16
    Fun         go to state 17
    VarType     go to state 18
    DeclareStm  go to state 19


State 17

    8 ClassStm: Fun .

    $default  reduce using rule 8 (ClassStm)


State 18

   10 Fun: VarType . ID LP Args RP LC BaseStm RC
   36 DeclareStm: VarType . DeclareVarStm SEMI

    ID  shift, and go to state 31

    DeclareVarStm  go to state 32


State 19

    9 ClassStm: DeclareStm .

    $default  reduce using rule 9 (ClassStm)


State 20

    5 Class: CLASS ID EXTENDS ID LC . ClassStms RC

    STATIC  shift, and go to state 11
    FINAL   shift, and go to state 12
    TYPE    shift, and go to state 13
    ID      shift, and go to state 14

    ClassStms   go to state 33
    ClassStm    go to state 16
    Fun         go to state 17
    VarType     go to state 18
    DeclareStm  go to state 19


State 21

   39 DeclareStm: STATIC FINAL . VarType DeclareVarStm SEMI

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    VarType  go to state 34


State 22

   14 VarType: ID . Arrays
   16        | ID .

    LB  shift, and go to state 25

    $default  reduce using rule 16 (VarType)

    Arrays  go to state 28


State 23

   11 Fun: STATIC VarType . ID LP Args RP LC BaseStm RC
   37 DeclareStm: STATIC VarType . DeclareVarStm SEMI

    ID  shift, and go to state 35

    DeclareVarStm  go to state 36


State 24

   38 DeclareStm: FINAL VarType . DeclareVarStm SEMI

    ID  shift, and go to state 37

    DeclareVarStm  go to state 38


State 25

   17 Arrays: LB . RB

    RB  shift, and go to state 39


State 26

   13 VarType: TYPE Arrays .

    $default  reduce using rule 13 (VarType)


State 27

   12 Fun: ID LP . Args RP LC BaseStm RC

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    $default  reduce using rule 93 (EMPTY)

    VarType  go to state 40
    Args     go to state 41
    Arg      go to state 42
    EMPTY    go to state 43


State 28

   14 VarType: ID Arrays .

    $default  reduce using rule 14 (VarType)


State 29

    4 Class: CLASS ID LC ClassStms RC .

    $default  reduce using rule 4 (Class)


State 30

    6 ClassStms: ClassStm ClassStms .

    $default  reduce using rule 6 (ClassStms)


State 31

   10 Fun: VarType ID . LP Args RP LC BaseStm RC
   40 DeclareVarStm: ID .
   41              | ID . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 44
    LP        shift, and go to state 45

    $default  reduce using rule 40 (DeclareVarStm)


State 32

   36 DeclareStm: VarType DeclareVarStm . SEMI
   42 DeclareVarStm: DeclareVarStm . COMMA DeclareVarStm

    SEMI   shift, and go to state 46
    COMMA  shift, and go to state 47


State 33

    5 Class: CLASS ID EXTENDS ID LC ClassStms . RC

    RC  shift, and go to state 48


State 34

   39 DeclareStm: STATIC FINAL VarType . DeclareVarStm SEMI

    ID  shift, and go to state 37

    DeclareVarStm  go to state 49


State 35

   11 Fun: STATIC VarType ID . LP Args RP LC BaseStm RC
   40 DeclareVarStm: ID .
   41              | ID . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 44
    LP        shift, and go to state 50

    $default  reduce using rule 40 (DeclareVarStm)


State 36

   37 DeclareStm: STATIC VarType DeclareVarStm . SEMI
   42 DeclareVarStm: DeclareVarStm . COMMA DeclareVarStm

    SEMI   shift, and go to state 51
    COMMA  shift, and go to state 47


State 37

   40 DeclareVarStm: ID .
   41              | ID . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 44

    $default  reduce using rule 40 (DeclareVarStm)


State 38

   38 DeclareStm: FINAL VarType DeclareVarStm . SEMI
   42 DeclareVarStm: DeclareVarStm . COMMA DeclareVarStm

    SEMI   shift, and go to state 52
    COMMA  shift, and go to state 47


State 39

   17 Arrays: LB RB .

    $default  reduce using rule 17 (Arrays)


State 40

   48 Arg: VarType . ID
   49    | VarType . ID COMMA Arg

    ID  shift, and go to state 53


State 41

   12 Fun: ID LP Args . RP LC BaseStm RC

    RP  shift, and go to state 54


State 42

   47 Args: Arg .

    $default  reduce using rule 47 (Args)


State 43

   46 Args: EMPTY .

    $default  reduce using rule 46 (Args)


State 44

   41 DeclareVarStm: ID ASSIGNOP . Exp

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 70
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 45

   10 Fun: VarType ID LP . Args RP LC BaseStm RC

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    $default  reduce using rule 93 (EMPTY)

    VarType  go to state 40
    Args     go to state 77
    Arg      go to state 42
    EMPTY    go to state 43


State 46

   36 DeclareStm: VarType DeclareVarStm SEMI .

    $default  reduce using rule 36 (DeclareStm)


State 47

   42 DeclareVarStm: DeclareVarStm COMMA . DeclareVarStm

    ID  shift, and go to state 37

    DeclareVarStm  go to state 78


State 48

    5 Class: CLASS ID EXTENDS ID LC ClassStms RC .

    $default  reduce using rule 5 (Class)


State 49

   39 DeclareStm: STATIC FINAL VarType DeclareVarStm . SEMI
   42 DeclareVarStm: DeclareVarStm . COMMA DeclareVarStm

    SEMI   shift, and go to state 79
    COMMA  shift, and go to state 47


State 50

   11 Fun: STATIC VarType ID LP . Args RP LC BaseStm RC

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    $default  reduce using rule 93 (EMPTY)

    VarType  go to state 40
    Args     go to state 80
    Arg      go to state 42
    EMPTY    go to state 43


State 51

   37 DeclareStm: STATIC VarType DeclareVarStm SEMI .

    $default  reduce using rule 37 (DeclareStm)


State 52

   38 DeclareStm: FINAL VarType DeclareVarStm SEMI .

    $default  reduce using rule 38 (DeclareStm)


State 53

   48 Arg: VarType ID .
   49    | VarType ID . COMMA Arg

    COMMA  shift, and go to state 81

    $default  reduce using rule 48 (Arg)


State 54

   12 Fun: ID LP Args RP . LC BaseStm RC

    LC  shift, and go to state 82


State 55

   80 ArrayIndex: TYPE . LB Exp RB

    LB  shift, and go to state 83


State 56

   55 Exp: ID . DOT Call
   74 IdStm: ID .
   76      | ID . DOT ID
   81 ArrayIndex: ID . LB Exp RB
   88 Call: ID . LP CallArgs RP

    DOT  shift, and go to state 84
    LP   shift, and go to state 85
    LB   shift, and go to state 86

    $default  reduce using rule 74 (IdStm)


State 57

   66 Exp: NOT . Exp

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 87
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 58

   64 Exp: LP . Exp RP

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 88
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 59

   68 Exp: DPLUS . IdStm

    TYPE   shift, and go to state 55
    ID     shift, and go to state 89
    THIS   shift, and go to state 67
    SUPER  shift, and go to state 68

    IdStm         go to state 90
    ClassPointer  go to state 91
    ArrayIndex    go to state 92


State 60

   70 Exp: DMINUS . IdStm

    TYPE   shift, and go to state 55
    ID     shift, and go to state 89
    THIS   shift, and go to state 67
    SUPER  shift, and go to state 68

    IdStm         go to state 93
    ClassPointer  go to state 91
    ArrayIndex    go to state 92


State 61

   84 Constant: INT .

    $default  reduce using rule 84 (Constant)


State 62

   85 Constant: FLOAT .

    $default  reduce using rule 85 (Constant)


State 63

   87 Constant: STR .

    $default  reduce using rule 87 (Constant)


State 64

   86 Constant: BOOL .

    $default  reduce using rule 86 (Constant)


State 65

   65 Exp: MINUS . Exp

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 94
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 66

   72 Exp: NEW . Call
   73    | NEW . ArrayIndex

    TYPE  shift, and go to state 55
    ID    shift, and go to state 95

    ArrayIndex  go to state 96
    Call        go to state 97


State 67

   78 ClassPointer: THIS .

    $default  reduce using rule 78 (ClassPointer)


State 68

   79 ClassPointer: SUPER .

    $default  reduce using rule 79 (ClassPointer)


State 69

   61 Exp: BoolExp .

    $default  reduce using rule 61 (Exp)


State 70

   41 DeclareVarStm: ID ASSIGNOP Exp .
   50 BoolExp: Exp . RELOP Exp
   51        | Exp . AND Exp
   52        | Exp . OR Exp
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp

    RELOP  shift, and go to state 98
    PLUS   shift, and go to state 99
    MINUS  shift, and go to state 100
    STAR   shift, and go to state 101
    DIV    shift, and go to state 102
    OR     shift, and go to state 103
    AND    shift, and go to state 104

    $default  reduce using rule 41 (DeclareVarStm)


State 71

   57 Exp: IdStm .
   69    | IdStm . DPLUS
   71    | IdStm . DMINUS
   82 Lvalue: IdStm .

    DPLUS   shift, and go to state 105
    DMINUS  shift, and go to state 106

    ASSIGNOP  reduce using rule 82 (Lvalue)
    $default  reduce using rule 57 (Exp)


State 72

   56 Exp: ClassPointer . DOT Call
   77 IdStm: ClassPointer . DOT ID

    DOT  shift, and go to state 107


State 73

   67 Exp: ArrayIndex .
   75 IdStm: ArrayIndex . DOT ID
   83 Lvalue: ArrayIndex .

    DOT  shift, and go to state 108

    ASSIGNOP  reduce using rule 83 (Lvalue)
    $default  reduce using rule 67 (Exp)


State 74

   58 Exp: Lvalue . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 109


State 75

   53 Exp: Constant .

    $default  reduce using rule 53 (Exp)


State 76

   54 Exp: Call .

    $default  reduce using rule 54 (Exp)


State 77

   10 Fun: VarType ID LP Args . RP LC BaseStm RC

    RP  shift, and go to state 110


State 78

   42 DeclareVarStm: DeclareVarStm . COMMA DeclareVarStm
   42              | DeclareVarStm COMMA DeclareVarStm .

    COMMA  shift, and go to state 47

    COMMA     [reduce using rule 42 (DeclareVarStm)]
    $default  reduce using rule 42 (DeclareVarStm)


State 79

   39 DeclareStm: STATIC FINAL VarType DeclareVarStm SEMI .

    $default  reduce using rule 39 (DeclareStm)


State 80

   11 Fun: STATIC VarType ID LP Args . RP LC BaseStm RC

    RP  shift, and go to state 111


State 81

   49 Arg: VarType ID COMMA . Arg

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    VarType  go to state 40
    Arg      go to state 112


State 82

   12 Fun: ID LP Args RP LC . BaseStm RC

    STATIC  shift, and go to state 113
    FINAL   shift, and go to state 12
    BREAK   shift, and go to state 114
    TYPE    shift, and go to state 115
    RETURN  shift, and go to state 116
    IF      shift, and go to state 117
    FOR     shift, and go to state 118
    WHILE   shift, and go to state 119
    ID      shift, and go to state 120
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    STATIC    [reduce using rule 93 (EMPTY)]
    FINAL     [reduce using rule 93 (EMPTY)]
    BREAK     [reduce using rule 93 (EMPTY)]
    TYPE      [reduce using rule 93 (EMPTY)]
    RETURN    [reduce using rule 93 (EMPTY)]
    IF        [reduce using rule 93 (EMPTY)]
    FOR       [reduce using rule 93 (EMPTY)]
    WHILE     [reduce using rule 93 (EMPTY)]
    ID        [reduce using rule 93 (EMPTY)]
    NOT       [reduce using rule 93 (EMPTY)]
    LP        [reduce using rule 93 (EMPTY)]
    DPLUS     [reduce using rule 93 (EMPTY)]
    DMINUS    [reduce using rule 93 (EMPTY)]
    INT       [reduce using rule 93 (EMPTY)]
    FLOAT     [reduce using rule 93 (EMPTY)]
    STR       [reduce using rule 93 (EMPTY)]
    BOOL      [reduce using rule 93 (EMPTY)]
    MINUS     [reduce using rule 93 (EMPTY)]
    NEW       [reduce using rule 93 (EMPTY)]
    THIS      [reduce using rule 93 (EMPTY)]
    SUPER     [reduce using rule 93 (EMPTY)]
    $default  reduce using rule 93 (EMPTY)

    VarType       go to state 121
    BaseStm       go to state 122
    Lines         go to state 123
    Line          go to state 124
    BreakStm      go to state 125
    IfStm         go to state 126
    WhileStm      go to state 127
    ForStm        go to state 128
    DeclareStm    go to state 129
    VarStm        go to state 130
    ReturnStm     go to state 131
    BoolExp       go to state 69
    Exp           go to state 132
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76
    EMPTY         go to state 133


State 83

   80 ArrayIndex: TYPE LB . Exp RB

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 134
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 84

   55 Exp: ID DOT . Call
   76 IdStm: ID DOT . ID

    ID  shift, and go to state 135

    Call  go to state 136


State 85

   88 Call: ID LP . CallArgs RP

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    $default  reduce using rule 93 (EMPTY)

    BoolExp       go to state 69
    Exp           go to state 137
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76
    CallArgs      go to state 138
    CallArg       go to state 139
    EMPTY         go to state 140


State 86

   81 ArrayIndex: ID LB . Exp RB

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 141
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 87

   50 BoolExp: Exp . RELOP Exp
   51        | Exp . AND Exp
   52        | Exp . OR Exp
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   66    | NOT Exp .

    $default  reduce using rule 66 (Exp)


State 88

   50 BoolExp: Exp . RELOP Exp
   51        | Exp . AND Exp
   52        | Exp . OR Exp
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   64    | LP Exp . RP

    RELOP  shift, and go to state 98
    RP     shift, and go to state 142
    PLUS   shift, and go to state 99
    MINUS  shift, and go to state 100
    STAR   shift, and go to state 101
    DIV    shift, and go to state 102
    OR     shift, and go to state 103
    AND    shift, and go to state 104


State 89

   74 IdStm: ID .
   76      | ID . DOT ID
   81 ArrayIndex: ID . LB Exp RB

    DOT  shift, and go to state 143
    LB   shift, and go to state 86

    $default  reduce using rule 74 (IdStm)


State 90

   68 Exp: DPLUS IdStm .

    $default  reduce using rule 68 (Exp)


State 91

   77 IdStm: ClassPointer . DOT ID

    DOT  shift, and go to state 144


State 92

   75 IdStm: ArrayIndex . DOT ID

    DOT  shift, and go to state 108


State 93

   70 Exp: DMINUS IdStm .

    $default  reduce using rule 70 (Exp)


State 94

   50 BoolExp: Exp . RELOP Exp
   51        | Exp . AND Exp
   52        | Exp . OR Exp
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   65    | MINUS Exp .

    STAR  shift, and go to state 101
    DIV   shift, and go to state 102

    $default  reduce using rule 65 (Exp)


State 95

   81 ArrayIndex: ID . LB Exp RB
   88 Call: ID . LP CallArgs RP

    LP  shift, and go to state 85
    LB  shift, and go to state 86


State 96

   73 Exp: NEW ArrayIndex .

    $default  reduce using rule 73 (Exp)


State 97

   72 Exp: NEW Call .

    $default  reduce using rule 72 (Exp)


State 98

   50 BoolExp: Exp RELOP . Exp

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 145
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 99

   59 Exp: Exp PLUS . Exp

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 146
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 100

   60 Exp: Exp MINUS . Exp

    TYPE    shift, and go to state 55
    ID      shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    DPLUS   shift, and go to state 59
    DMINUS  shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    STR     shift, and go to state 63
    BOOL    shift, and go to state 64
    MINUS   shift, and go to state 65
    NEW     shift, and go to state 66
    THIS    shift, and go to state 67
    SUPER   shift, and go to state 68

    BoolExp       go to state 69
    Exp           go to state 147
    IdStm         go to state 71
    ClassPointer  go to state 72
    ArrayIndex    go to state 73
    Lvalue        go to state 74
    Constant      go to state 75
    Call          go to state 76


State 101
